# Summary-Generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 28de0806cf38_first_migration.py
app/api/: routers.py  services.py  validation.py
app/api/endpoints/: __init__.py  course.py  user.py
app/core/: base.py  config.py  db.py  user.py
app/crud/: course.py
app/models/: __init__.py  course.py  user.py
app/schemas/: course.py
